# DataScienceBootcamp

./: pyproject.toml
DataScienceFundamentals/Examenes/Intento3/: examen.ipynb
DataScienceFundamentals/PandasParaCienciasDeDatos/cores/AnalisisDeDatosConPandas/: practica.ipynb
DataScienceFundamentals/PandasYVisualizacion/cores/AnalisisConPandasYKanggle/: practica.ipynb
DataScienceFundamentals/PandasYVisualizacion/cores/Proyecto1Parte3/: parte3.ipynb
DataScienceFundamentals/PandasYVisualizacion/cores/SimulacionDeExamen/: practica.ipynb
Pre-bootcamp/ConoceMasSobrePython/Cores/: bucle_for_básico1.py  funciones_intermedias_1.py  lista-tuplas-diccionario.py
